update: account creation refactor: better AOP