@@ -7,26 +7,33 @@ import org.springframework.util.FileCopyUtils;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Component
 public class Medias {
     public void ensureParentPath(String path) throws IOException {
-        ensurePath(Paths.get(path).getParent().toString());
+        ensurePath(Path.of(path).getParent().toString());
     }
 
     public void ensurePath(String path) throws IOException {
         if (path == null || path.isEmpty()) {
             throw new IllegalArgumentException("Path cannot be null or empty");
         }
-        Files.createDirectories(Paths.get(path));
+        Files.createDirectories(Path.of(path));
     }
 
     public void save(String path, InputStreamSource file) throws IOException {
-        save(Paths.get(path), file);
+        save(Path.of(path), file);
     }
 
     public void save(Path path, InputStreamSource file) throws IOException {
         FileCopyUtils.copy(file.getInputStream(), Files.newOutputStream(path));
+    }
+
+    public void remove(String path) throws IOException {
+        remove(Path.of(path));
+    }
+
+    public void remove(Path path) throws IOException {
+        Files.deleteIfExists(path);
     }
 }
